FastLog 开发日志

=====================================

> 作者： 荣涛
> 时间：2021年6月 - 


# 编码历史

* 2021年6月22日
	* decoder: output 添加 元数据 输出
	* decoder: `level`命令改为`log`
	* decoder: 新的命令行`meta`
	* decoder: 新的命令行`search`, 2021年6月22日13:25:39(完成)

* 2021年6月21日
	* decoder: `show level`改为`level show`
	* decoder: 统计命令行
	* decoder: filter 过滤器
	* decoder: `level show`命令改为`level`
* 2021年6月18日
	* decoder: load log [file name] 命令行
	* decoder: xml 支持
* 2021年6月17日
	* decoder: show level 命令行
	* decoder: getopt 命令行参数
	* decoder: 添加 `ls` 命令(system("ls"))
* 2021年6月16日 
	* decoder reprintf: 恢复字符串的输出。
	* txt 的输出
	* linenoise 新建
* 2021年6月11日 decoder timestamp
* 2021年6月10日 解析命令 数据结构设计
* 2021年6月9日 添加 日志 解析 main() 程序
* 2021年6月8日 添加 stagingBuffer 功能，移植自 NanoLog
* 2021年6月3日 rdtsc部分；log_id获取；
* 2021年5月21日    创建源码文件
